[project] :wrench: Fix tests for Gradle 9
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>